[gui] fix tables overflow in layout

--- a/public/stylesheets/easy.css
+++ b/public/stylesheets/easy.css
@@ -205,7 +205,7 @@ padding:2px;
 		width:902px;
 		text-align:left;
 		position:relative;
-		background: none repeat scroll 0% 0% #C4C4C4;
+		background: none repeat scroll 0% 0% #dbdcdb;
 	}
 	#container.centered {
 	  margin:0 auto;
